--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<div align="center">
 <head>
     <meta charset="UTF-8">
     <title>SocialPsy PKU</title>
@@ -8,7 +10,8 @@
 <h1>Welcome to participate in our study! </h1>
 <p>Firstly, watch the video below.</p>
 <p>After watching, click the button below and move on.</p>
-
+</div>
+    
 <script src="js/plyr.js"></script>
 <link rel="stylesheet" href="css/plyr.css"/>
 
